# youbit

./: .gitignore  .pylintrc  LICENSE  Pipfile  README.md  TEMP_gop.py  TEMP_test.py  base53.ipynb  build.py  cli.py  cookies  cookies.ipynb  gop.py  mypy.ini  opencvstream.ipynb  perf.py  pyproject.toml  reedsolo.ipynb  requirements.txt  setup.py  test.ipynb  test.py  test2.py  ytdlp.ipynb
data/: README_upload.txt
tests/: conftest.py  test_automation.py  test_core.py  test_decode.py  test_encode.py  test_interface.py  test_util.py  test_video.py
tests/testdata/solutions/: test_read_pixels_solution_bpp2.npy
tests/unit/: test_decode.py  test_detransform.py  test_download.py  test_ecc.py  test_encode.py  test_metadata.py  test_settings.py  test_transform.py  test_upload.py  test_util.py  test_video.py  test_youbit.py
tests/unit/testdata/solutions/: test_read_pixels_solution_bpp1.npy  test_read_pixels_solution_bpp3.npy  test_video_decode_solution.npy
youbit/: __init__.py  __main__.py  _decode.py  _encode.py  _video_code.py  automate.py  decode.py  detransform.py  download.py  encode.py  metadata.py  settings.py  tempdir.py  transform.py  types.py  upload.py  util.py  video.py  yb.py  youbit.py
youbit/data/: README_upload.txt
youbit/ecc/: creedsolo.c  creedsolo.pyx  ecc.py
